Kubernetes/k8s-mesh/k8s/web/config-map.yml
apiVersion: v1
kind: ConfigMap
metadata:
  name: web-envoy-config
data:
  envoy.yaml: |-
    admin:
      access_log_path: /dev/stdout
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901
    static_resources:
      listeners:
        - name: web.listener
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8000
          filter_chains:
            - filters:
              - name: web.listener.filter
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                  stat_prefix: web.listener.filter.http
                  access_log:
                    - name: app.filter.log.file
                      typed_config:
                        "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                        path: /dev/stdout
                  route_config:
                    name: web.listener.filter.route
                    virtual_hosts:
                      - name: web.listener.route.service
                        domains:
                          - "*"
                        routes:
                          - match:
                              prefix: "/"
                            route:
                              cluster: web.cluster
                  http_filters:
                    - name: envoy.filters.http.router
                      typed_config: {}
      clusters:
        - name: web.cluster
          connect_timeout: 0.25s
          type: strict_dns
          lb_policy: round_robin
          hosts:
            - socket_address:
                address: app1-service
                port_value: 8000
            - socket_address:
                address: app2-service
                port_value: 8000
