Kubernetes/k8s-mesh/k8s/web/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  selector:
    matchLabels:
      layer: web-node
  template:
    metadata:
      name: web-pod
      labels:
        layer: web-node
    spec:
      containers:
        - name: db-mesh
          image: envoyproxy/envoy:v1.16.0
          ports:
            - name: web-port
              containerPort: 8000
          args:
            - "--config-path /etc/envoy/envoy.yaml"
          volumeMounts:
            - name: envoy-config
              mountPath: /etc/envoy/envoy.yaml
              subPath: envoy.yaml
      volumes:
          - name: envoy-config
            configMap:
              name: web-envoy-config
              items:
                - key: envoy.yaml
                  path: envoy.yaml
